<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_about">

    <fragment
        android:id="@+id/nav_about"
        android:name="com.maynorcourse.mybusinesscard.items.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about">

    </fragment>

    <fragment
        android:id="@+id/nav_study"
        android:name="com.maynorcourse.mybusinesscard.items.StudyFragment"
        android:label="@string/study"
        tools:layout="@layout/fragment_study" />

    <fragment
        android:id="@+id/nav_interests"
        android:name="com.maynorcourse.mybusinesscard.items.InerestsFragment"
        android:label="@string/interests"
        tools:layout="@layout/fragment_inerests" />

    <fragment
        android:id="@+id/nav_plans"
        android:label="@string/plans"
        android:name="com.maynorcourse.mybusinesscard.items.PlansFragment"
        tools:layout="@layout/fragment_plans"/>

    <fragment
        android:id="@+id/nav_contacts"
        android:label="@string/contacts"
        android:name="com.maynorcourse.mybusinesscard.items.PlansFragment"
        tools:layout="@layout/fragment_plans"/>

</navigation>